# digit-classification

./: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-ci.yml
src/digit_classification/: cli.py  constants.py  data.py  evaluation.py  model.py
tests/: test_cli.py  test_data.py  test_evaluation.py  test_model.py
